@@ -4,6 +4,8 @@ VERSION 0.6.4cvs
 
 2005-03-17  Vincent Richard  <vincent@vincent-richard.net>
 
+ * base.{cpp|hpp}: renamed 'MIME_VERSION' to 'SUPPORTED_MIME_VERSION'.
+
  * Added "Viewer" example in /examples/viewer: demonstrate the parsing
    capabilities of VMime and it can help when debugging...
 
